transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: transmission
spec:
  selector:
    app: transmission
  ports:
  - port: 80
    name: torrent-ui
    protocol: TCP
    targetPort: 9091
    nodePort: 9091
  - protocol: TCP
    name: torrent-tcp
    port: 51413
    nodePort: 51413
  - protocol: UDP
    name: torrents-udp
    port: 51413
    nodePort: 51413
  sessionAffinity: None
  type: NodePort
